Working CO2 Sensor

--- a/IWSN/Luchtkwaliteit/platformio.ini
+++ b/IWSN/Luchtkwaliteit/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	seeed-studio/Grove - Multichannel Gas Sensor@^1.0.0
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit Unified Sensor@^1.1.15
+	adafruit/Adafruit CCS811 Library@^1.1.3
