--- a/IWSN/Luchtkwaliteit/platformio.ini
+++ b/IWSN/Luchtkwaliteit/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/Adafruit CCS811 Library@^1.1.3
+	mbed-digi-international-inc/XBeeLib@0.0.0+sha.780db84ce891
+	andrewrapp/XBee@0.0.0-alpha+sha.39f236ea18
