--- a/IWSN/Luchtkwaliteit/platformio.ini
+++ b/IWSN/Luchtkwaliteit/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.3
 	mbed-digi-international-inc/XBeeLib@0.0.0+sha.780db84ce891
 	andrewrapp/XBee@0.0.0-alpha+sha.39f236ea18
+	bblanchon/ArduinoJson@^7.3.1
