--- a/InternetTechnologie/Frontend/iot-dashboard/package.json
+++ b/InternetTechnologie/Frontend/iot-dashboard/package.json
@@ -12,6 +12,7 @@
     "@shadcn/ui": "^0.0.4",
     "chart.js": "^4.4.8",
     "lucide-react": "^0.483.0",
+    "mqtt": "^5.10.4",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
