--- a/IWSN/Luchtkwaliteit/platformio.ini
+++ b/IWSN/Luchtkwaliteit/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	mbed-digi-international-inc/XBeeLib@0.0.0+sha.780db84ce891
 	andrewrapp/XBee@0.0.0-alpha+sha.39f236ea18
 	bblanchon/ArduinoJson@^7.3.1
+	arduino-libraries/Arduino Low Power@^1.2.2
